// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button scss has to match style dependencies css 1`] = `
"/*
* Used for snapshot testing
*
*/
/*
 * Utilities
 */
/*
* Used for snapshot testing
*
*/
/*
 * Utilities
 */
/*
* Icon component
*
*/
/*
 * Utilities
 */
.dnb-icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1rem;
  line-height: 1rem;
  color: inherit;
  width: 1em;
  height: 1em;
}
.dnb-icon img, :where(.dnb-core-style) .dnb-icon img,
.dnb-icon svg,
:where(.dnb-core-style) .dnb-icon svg {
  width: inherit;
  height: inherit;
  shape-rendering: geometricprecision;
  vertical-align: top;
}
.dnb-icon svg[width="100%"] {
  width: inherit;
}
.dnb-icon svg[height="100%"] {
  height: inherit;
}
.dnb-icon--inherit-color svg:not([fill]), .dnb-icon--inherit-color svg [fill] {
  fill: currentcolor;
}
.dnb-icon--inherit-color svg [stroke] {
  stroke: currentcolor;
}
.dnb-icon--small {
  font-size: 0.75rem;
}
.dnb-icon--default {
  font-size: 1rem;
}
.dnb-icon--medium {
  font-size: 1.5rem;
}
.dnb-icon--large {
  font-size: 2rem;
}
.dnb-icon--x-large {
  font-size: 2.5rem;
}
.dnb-icon--xx-large {
  font-size: 3rem;
}
.dnb-icon--custom-size {
  width: auto;
  height: auto;
  line-height: 0;
}
.dnb-icon--auto {
  font-size: 1em;
}
.dnb-icon--auto > .dnb-icon--wrapper {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}
h1 > .dnb-icon, h2 > .dnb-icon, h3 > .dnb-icon, h4 > .dnb-icon, h5 > .dnb-icon, h6 > .dnb-icon {
  vertical-align: middle;
}
p > .dnb-icon {
  vertical-align: inherit;
}
.dnb-icon.dnb-skeleton {
  color: var(--skeleton-color) !important;
}
.dnb-icon.dnb-skeleton::before, .dnb-icon.dnb-skeleton::after {
  content: none !important;
}

/*
* Used for snapshot testing
*
*/
/*
 * Utilities
 */
/*
* Tooltip component
*
*/
/*
 * Utilities
 */
.dnb-tooltip {
  --tooltip-color: white;
  --tooltip-background-color: black;
  --tooltip-border-color: 1px solid black;
  --tooltip-border-radius: 1rem;
  position: absolute;
  z-index: 3100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  color: var(--tooltip-color);
  text-align: center;
  background-color: var(--tooltip-background-color);
  border-radius: var(--tooltip-border-radius);
  box-shadow: var(--shadow-default);
  opacity: 0;
  visibility: hidden;
  transition: opacity 200ms var(--easing-default);
}
.dnb-tooltip--large {
  padding: 0.25rem 1rem;
}
.dnb-tooltip--active {
  visibility: visible;
  /*
    because of the first "show" we also use animation
    also, use forwards because of the usage of visibility
  */
  animation: show-tooltip 200ms var(--easing-default) forwards;
}
html[data-visual-test] .dnb-tooltip--active, .dnb-tooltip--active.dnb-tooltip--no-animation {
  animation: show-tooltip 1ms var(--easing-default) forwards;
}
.dnb-tooltip--hide {
  visibility: visible;
  animation: hide-tooltip 200ms var(--easing-default) forwards;
}
.dnb-tooltip--hide.dnb-tooltip--no-animation {
  animation: hide-tooltip 1ms linear forwards;
}
.dnb-tooltip--fixed {
  position: fixed;
}
html[data-visual-test] .dnb-tooltip--hide {
  animation: hide-tooltip 1ms linear 1s forwards;
}
.dnb-tooltip__portal {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}
.dnb-tooltip__content {
  min-width: 2rem;
  min-height: 1.5rem;
  padding: 0;
}
.dnb-tooltip__arrow {
  position: absolute;
  pointer-events: none;
  margin: 0;
  width: 1rem;
  height: 0.5rem;
  overflow: hidden;
}
.dnb-tooltip__arrow::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 1rem;
  height: 1rem;
  background-color: var(--tooltip-background-color);
  border: var(--tooltip-border-color);
  transform: translateY(70%) rotate(45deg);
}
.dnb-tooltip__arrow__position--bottom {
  top: -0.5rem;
}
.dnb-tooltip__arrow__position--top {
  bottom: -0.5rem;
  transform: rotate(180deg);
}
.dnb-tooltip__arrow__position--left {
  right: -0.75rem;
  margin-right: 3px;
  transform: rotate(90deg);
}
.dnb-tooltip__arrow__position--right {
  left: -0.75rem;
  margin-left: 3px;
  transform: rotate(270deg);
}
.dnb-tooltip__arrow__arrow--left {
  align-self: flex-start;
}
.dnb-tooltip__arrow__arrow--right {
  align-self: flex-end;
}

@keyframes show-tooltip {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes hide-tooltip {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
    visibility: hidden;
  }
}
/*
* Used for snapshot testing
*
*/
/*
 * Utilities
 */
/*
 * FormStatus component
 *
 */
/*
 * Utilities
 */
.dnb-form-status {
  --form-status-radius: 0.25rem;
  display: flex;
  opacity: 1;
}
.dnb-form-status__shell {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  min-width: inherit;
  border-radius: var(--form-status-radius);
}
.dnb-form-status__text {
  padding: 0.625rem 1rem;
  cursor: text;
  color: inherit;
  line-height: var(--line-height-small);
  font-size: var(--font-size-small);
  white-space: normal;
}
button .dnb-form-status__text {
  cursor: inherit;
}
.dnb-form-status__text .dnb-ul,
.dnb-form-status__text .dnb-anchor {
  font-size: inherit;
}
.dnb-form-status__text .dnb-ul:not([class*=dnb-space__left]) {
  padding-left: 1rem;
}
.dnb-spacing .dnb-form-status__text .dnb-ul:not([class*=dnb-space__bottom]) {
  margin-bottom: 0.5rem;
}
.dnb-spacing .dnb-form-status__text .dnb-ul:not([class*=dnb-space__bottom]) .dnb-li {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}
.dnb-icon + .dnb-form-status__text {
  padding-left: 0.5rem;
}
.dnb-form-status__shell > .dnb-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0.3333333em 0.3333333em 0.3333333em 0.6666666em;
}
.dnb-form-status__size--large .dnb-form-status__text {
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
}
.dnb-form-status__size--large .dnb-form-status__shell > .dnb-icon {
  margin-top: 0.6666666em;
  margin-bottom: 0.6666666em;
}
.dnb-form-status--stretch {
  flex-grow: 1;
}
.dnb-form-status--stretch .dnb-form-status__shell {
  width: 100%;
}
.dnb-form-status--stretch .dnb-form-status__text {
  max-width: 47rem;
}
.dnb-form-status[hidden] {
  display: none;
}

/*
* Button component
*
*/
/*
 * Utilities
 */
:root {
  --button-icon-size: 1rem;
  --button-height: 2.5rem;
}

.dnb-button {
  --button-font-size: var(--font-size-basis);
  --button-font-size-small: var(--font-size-small);
  --button-icon-size--small: 0.75rem;
  --button-icon-size--medium: 1.5rem;
  --button-icon-size--large: 2rem;
  --button-icon-gutter: 0.5rem;
  --button-width: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-border-width: 0.0625rem;
  --button-border-width--hover: 0.1875rem;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--control-button: 0.25rem;
  --button-padding-left: 0;
  --button-padding-right: 0;
  --button-padding-icon: 1rem;
  --button-padding--default: 1.5rem;
  --button-padding--small: 1rem;
  --button-padding--medium: 1rem;
  --button-padding--large: 2rem;
  --button-icon-margin-top: 0;
  --button-icon-margin-left: 0;
  --button-icon-margin-right: 0;
  position: relative;
  user-select: none;
  /* stylelint-disable-next-line */
  -webkit-user-select: none;
  cursor: pointer;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--button-width);
  height: auto;
  padding: 0 var(--button-padding-right) 0 var(--button-padding-left);
  border: none;
  border-radius: var(--button-border-radius);
  text-align: left;
  font-size: var(--font-size-small);
  text-decoration: none;
  box-shadow: none;
  /* stylelint-disable-next-line */
}
.dnb-button--wrap {
  overflow-wrap: break-word;
  white-space: normal;
}
.dnb-button, .dnb-core-style .dnb-button {
  line-height: var(--button-height);
}
.dnb-button__text {
  margin: 0.5rem 0;
  font-size: var(--button-font-size);
  line-height: var(--line-height-basis);
  color: inherit;
  transform: translateY(-0.03125rem);
}
.dnb-button__text [data-os=linux] {
  transform: translateY(-0.035rem);
}
.dnb-button__alignment {
  display: inline-block;
  width: 0;
}
.dnb-button__bounding {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  transform: scale(1.1, 1.4);
  background-color: transparent;
  border-radius: var(--button-border-radius);
}
.dnb-button--size-small {
  --button-height: var(--button-height--small);
  width: var(--button-width--small);
  font-size: var(--button-font-size-small);
}
.dnb-button--size-small .dnb-button__text {
  margin: 0;
}
.dnb-button--has-text.dnb-button--size-small {
  --button-padding-left: var(--button-padding--small);
  --button-padding-right: var(--button-padding--small);
}
.dnb-button--size-medium {
  --button-height: var(--button-height--medium);
  width: var(--button-width--medium);
}
.dnb-button--size-medium .dnb-button__text {
  margin: 0;
}
.dnb-button--has-text.dnb-button--size-medium {
  --button-padding-left: var(--button-padding--medium);
  --button-padding-right: var(--button-padding--medium);
}
.dnb-button--control-before.dnb-button--size-medium {
  line-height: var(--button-height);
}
.dnb-button--control-after.dnb-button--size-medium {
  line-height: var(--button-height);
}
.dnb-button--size-large {
  --button-height: var(--button-height--large);
  --button-padding-icon: 1.5rem;
  width: var(--button-width--large);
}
.dnb-button--has-text.dnb-button--size-large {
  --button-padding-left: var(--button-padding--large);
  --button-padding-right: var(--button-padding--large);
}
.dnb-button--has-text {
  --button-padding-left: var(--button-padding--default);
  --button-padding-right: var(--button-padding--default);
  width: auto;
}
.dnb-button__icon {
  margin: var(--button-icon-margin-top) var(--button-icon-margin-right) 0 var(--button-icon-margin-left);
}
.dnb-button--has-text.dnb-button--icon-position-left {
  --button-padding-left: var(--button-padding-icon);
  --button-icon-margin-right: var(--button-icon-gutter);
}
.dnb-button--has-text.dnb-button--icon-position-right {
  --button-padding-right: var(--button-padding-icon);
  --button-icon-margin-left: var(--button-icon-gutter);
}
.dnb-button--icon-size-small {
  --button-icon-size: var(--button-icon-size--small);
}
.dnb-button--icon-size-medium {
  --button-icon-size: var(--button-icon-size--medium);
}
.dnb-button--icon-size-large {
  --button-icon-size: var(--button-icon-size--large);
}
.dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
  order: 2;
}
.dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
  order: 1;
}
.dnb-button:not(.dnb-button--has-text) .dnb-button__icon {
  width: inherit;
}
.dnb-button__icon.dnb-icon svg:not([width]):not([height]) {
  width: var(--button-icon-size);
  height: var(--button-icon-size);
}
[href] > .dnb-button__icon.dnb-icon {
  line-height: var(--button-font-size);
}
.dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__icon {
  order: 1;
}
.dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__text {
  order: 2;
}
.dnb-button--stretch {
  width: 100%;
}
.dnb-button--control-before {
  border-radius: var(--button-border-radius--control-button) 0 0 var(--button-border-radius--control-button);
}
.dnb-button--control-after {
  border-radius: 0 var(--button-border-radius--control-button) var(--button-border-radius--control-button) 0;
}
.dnb-button--reset {
  margin: 0;
  padding: 0;
  width: auto;
  height: auto;
  overflow: visible;
  border: none;
  border-radius: 0;
  background-color: transparent;
  appearance: none;
  box-shadow: none;
  color: inherit;
  font: inherit;
  text-align: inherit;
  line-height: inherit;
}
html:not([data-whatintent=touch]) .dnb-button--reset:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--reset:hover:not([disabled]) {
  box-shadow: none;
  border: none;
}
.dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
  outline: none;
}
html[data-whatinput=keyboard] .dnb-button--reset:not([disabled]):focus, html[data-whatinput=keyboard] .dnb-button--reset:not([disabled]):active {
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html[data-whatinput=mouse] .dnb-button--reset:not([disabled]):focus, html[data-whatinput=mouse] .dnb-button--reset:not([disabled]):active {
  box-shadow: none;
  color: inherit;
  border: none;
}
.dnb-button[type=button], .dnb-button[type=reset], .dnb-button[type=submit] {
  appearance: none;
  /* stylelint-disable-next-line */
  -moz-appearance: none;
  /* stylelint-disable-next-line */
  -webkit-appearance: none;
}
.dnb-button[disabled] {
  cursor: not-allowed;
  outline: none;
}
.dnb-form-row--vertical .dnb-form-row__content > .dnb-button {
  align-self: flex-start;
}
.dnb-form-row--horizontal .dnb-form-row__content .dnb-button__text {
  white-space: nowrap;
}
.dnb-button + .dnb-form-status {
  margin-top: 0.5rem;
}

/* Firefox includes a hidden border which messes up button dimensions */
button.dnb-button::-moz-focus-inner {
  border: none;
}"
`;

exports[`Button scss has to match theme css for sbanken 1`] = `
"/*
* Button theme
*
*/
/*
 * Utilities
 */
/*
 * Utilities
 */ /*
* Button mixins
*
*/
/*
 * Utilities
 */
/*
 * Utilities
 */ /*
* Button mixins
*
*/
.dnb-button--tertiary {
  --button-tertiary-focus-left: -0.5rem;
  --button-tertiary-focus-right: -0.5rem;
  --button-tertiary-focus-overflow--icon-top: -0.5rem;
  --button-tertiary-underline-left: var(
    --button-tertiary-underline-overflow
  );
  --button-tertiary-underline-right: var(
    --button-tertiary-underline-overflow
  );
  --button-tertiary-underline-overflow: 0;
  --button-tertiary-underline-overflow--icon: calc(
    (var(--button-icon-gutter) + var(--button-icon-size)) * -1
  );
}
.dnb-button--tertiary .dnb-button__text {
  position: relative;
}
.dnb-button--tertiary .dnb-button__text::after {
  content: "";
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  bottom: 0;
  width: auto;
  height: 0.095rem;
  border-radius: 0.0475rem;
  color: var(--color-sea-green);
  background-color: currentcolor;
  bottom: -0.0625rem;
  color: transparent;
  transition: color 250ms ease-in-out;
  left: var(--button-tertiary-underline-left);
  right: var(--button-tertiary-underline-right);
}
[data-visual-test-wrapper] .dnb-button--tertiary .dnb-button__text::after {
  transition: none;
}
.dnb-skeleton .dnb-button--tertiary .dnb-button__text::after {
  content: none;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) {
  outline: none;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled])::before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: var(--button-tertiary-focus-left);
  bottom: 0;
  right: var(--button-tertiary-focus-right);
  height: inherit;
  border-radius: inherit;
  outline: none;
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) .dnb-button__text::after {
  visibility: hidden;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]) .dnb-button__text::after {
  visibility: visible;
}
.dnb-button--tertiary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--tertiary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--tertiary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) {
  outline: initial;
}
html[data-whatinput=keyboard] .dnb-button--tertiary:active:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) {
  box-shadow: none;
}
html[data-whatintent=touch] .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html[data-whatintent=touch] html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
  transition: none;
  visibility: visible;
  opacity: 1;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html:not([data-whatintent=touch]) html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
  visibility: hidden;
}
.dnb-button--tertiary.dnb-button--has-text {
  --button-padding-left: 0;
  --button-padding-right: 0;
  --button-icon-margin-top: calc(
    (var(--button-height) - var(--button-icon-size)) / 2
  );
}
.dnb-button--tertiary.dnb-button--has-text .dnb-button__icon {
  align-self: flex-start;
}
.dnb-button--tertiary.dnb-button--icon-position-top {
  --button-tertiary-focus-left: var(
    --button-tertiary-focus-overflow--icon-top
  );
  --button-tertiary-focus-right: var(
    --button-tertiary-focus-overflow--icon-top
  );
  flex-direction: column;
  border-radius: 0.5rem;
  vertical-align: middle;
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--has-text {
  --button-icon-margin-top: 0.5rem;
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--has-text .dnb-button__icon {
  align-self: center;
}
.dnb-button--tertiary.dnb-button--icon-position-top .dnb-button__text {
  margin-top: 0;
  margin-bottom: 0.25rem;
  font-size: var(--font-size-x-small);
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--size-large .dnb-button__text {
  font-size: var(--font-size-small);
}
.dnb-button--tertiary.dnb-button--icon-position-top .dnb-button__alignment {
  order: 3;
  height: 0;
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-size-medium, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-size-large {
  --button-tertiary-underline-overflow--icon: var(
    --button-tertiary-underline-overflow
  );
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left {
  --button-tertiary-focus-right: -1rem;
  --button-tertiary-underline-left: var(
    --button-tertiary-underline-overflow--icon
  );
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right {
  --button-tertiary-focus-left: -1rem;
  --button-tertiary-underline-right: var(
    --button-tertiary-underline-overflow--icon
  );
}
.dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text) {
  --button-tertiary-focus-left: 0;
  --button-tertiary-focus-right: 0;
}
html[data-whatinput=keyboard] .dnb-button--tertiary:hover:focus .dnb-button__text::after {
  visibility: hidden;
}

.dnb-button {
  --button-background--focus: var(--sb-color-blue-light-3);
  --button-border-radius--control-button: 3rem;
  --button-padding--large: 1.5rem;
  --button-primary-shadow: var(--sb-shadow-medium);
  --button-primary-shadow--hover: var(--sb-shadow-medium);
  --button-primary-color: var(--sb-color-white);
  --button-primary-color--hover: var(--sb-color-purple-alternative);
  --button-primary-color--active: var(--sb-color-white);
  --button-primary-color--disabled: var(--sb-color-gray-dark-2);
  --button-primary-background: var(--sb-color-purple-alternative);
  --button-primary-background--hover: var(--sb-color-green);
  --button-primary-background--active: var(--sb-color-purple-alternative);
  --button-primary-background--disabled: var(--sb-color-gray-light);
  --button-primary-border--hover: transparent;
  --button-secondary-color: var(--sb-color-purple-alternative);
  --button-secondary-color--hover: var(--sb-color-purple-alternative);
  --button-secondary-color--active: var(--sb-color-purple-alternative);
  --button-secondary-color--disabled: var(--sb-color-gray-dark);
  --button-secondary-background: var(--sb-color-white);
  --button-secondary-background--hover: var(--sb-color-green);
  --button-secondary-background--active: var(--sb-color-white);
  --button-secondary-border: var(--button-secondary-border--default);
  --button-secondary-border--default: var(--sb-color-purple-alternative);
  --button-secondary-border--hover: var(
    --button-secondary-border--default
  );
  --button-secondary-border--active: var(
    --button-secondary-border--default
  );
  --button-secondary-border--disabled: var(--sb-color-gray-light);
  --button-tertiary-color: var(--sb-color-violet);
  --button-tertiary-border: var(--sb-color-violet);
  border: none;
}
.dnb-button--has-text.dnb-button--size-large {
  --button-padding-icon: 1rem;
}
.dnb-button--primary {
  color: var(--button-primary-color);
  background-color: var(--button-primary-background);
  box-shadow: var(--button-primary-shadow);
}
html:not([data-whatintent=touch]) .dnb-button--primary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--primary:hover:not([disabled]) {
  color: var(--button-primary-color--hover);
  background-color: var(--button-primary-background--hover);
  --border-color: var(--button-primary-border--hover);
  --border-width: 0.0625rem;
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color), var(--button-primary-shadow--hover);
  border-color: transparent;
}
.dnb-button--primary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--primary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--primary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--primary:active:not([disabled]) {
  color: var(--button-primary-color--active);
  background-color: var(--button-primary-background--active);
}
.dnb-button--secondary {
  color: var(--button-secondary-color);
  background-color: var(--button-secondary-background);
  --border-color: var(--button-secondary-border);
  --border-width: 0.0625rem;
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:hover:not([disabled]) {
  --button-secondary-border: var(--button-secondary-border--hover);
  color: var(--button-secondary-color--hover);
  background-color: var(--button-secondary-background--hover);
}
.dnb-button--secondary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--secondary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:active:not([disabled]) {
  --button-secondary-border: var(--button-secondary-border--active);
  color: var(--button-secondary-color--active);
  background-color: var(--button-secondary-background--active);
}
.dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before, .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after {
  box-shadow: none;
  border: none;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before:hover[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before:hover:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after:hover:not([disabled]) {
  box-shadow: none;
  border: none;
}
html:not([data-whatintent=touch]) .dnb-button--primary:focus-visible[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:focus-visible[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--primary:focus-visible:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:focus-visible:not([disabled]) {
  color: var(--sb-color-blue-dark);
  background-color: var(--button-background--focus);
  outline: none;
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color), var(--sb-shadow-medium);
  border-color: transparent;
}
.dnb-button[disabled] {
  --button-primary-shadow: 0 0 transparent;
  --button-primary-color: var(--button-primary-color--disabled);
  --button-primary-background: var(
    --button-primary-background--disabled
  );
  --button-secondary-color: var(--button-secondary-color--disabled);
  --button-secondary-border--default: var(
    --button-secondary-border--disabled
  );
}
.dnb-button:not([disabled]).dnb-button__status--error {
  --button-primary-shadow--hover: 0 0 transparent;
  --button-primary-color: var(--sb-color-white);
  --button-primary-color--hover: var(--sb-color-red);
  --button-primary-color--active: var(--sb-color-white);
  --button-primary-background: var(--sb-color-red);
  --button-primary-background--hover: var(--sb-color-magenta-light-3);
  --button-primary-background--active: var(--sb-color-red);
  --button-primary-border--hover: var(--sb-color-red);
  --button-secondary-color: var(--sb-color-red);
  --button-secondary-color--hover: var(--sb-color-red);
  --button-secondary-color--active: var(--sb-color-red);
  --button-secondary-background--hover: var(--sb-color-magenta-light-3);
  --button-secondary-border--default: var(--sb-color-red);
}
.dnb-button--tertiary {
  --button-tertiary-focus-overflow--icon-top: 0;
  --button-tertiary-underline-overflow: -0.5rem;
  --button-tertiary-underline-overflow--icon: calc(
    (
        var(--button-icon-gutter) + var(--button-icon-size) - var(
            --button-tertiary-underline-overflow
          )
      ) * -1
  );
  --button-tertiary-underline-bottom: -0.5rem;
  --button-tertiary-text-bottom--icon: 0.5rem;
  --button-tertiary-text-top--icon: 0;
  color: var(--button-tertiary-color);
  background-color: transparent;
}
.dnb-button--tertiary .dnb-button__text::after {
  height: 0.0625rem;
  bottom: var(--button-tertiary-underline-bottom);
}
.dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-top {
  --button-padding-left: calc(
    var(--button-tertiary-underline-overflow) * -1
  );
  --button-padding-right: calc(
    var(--button-tertiary-underline-overflow) * -1
  );
}
.dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-top .dnb-button__text {
  margin-top: var(--button-tertiary-text-top--icon);
  margin-bottom: var(--button-tertiary-text-bottom--icon);
  font-size: var(--button-font-size);
}
.dnb-button--tertiary.dnb-button--size-large {
  --button-tertiary-underline-bottom: -0.75rem;
  --button-tertiary-underline-overflow: -1.5rem;
  --button-tertiary-text-bottom--icon: 0.75rem;
  --button-tertiary-text-top--icon: 0.25rem;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]):not(:focus-visible) .dnb-button__text::after {
  color: var(--button-tertiary-border);
  transition: none;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]):not(.dnb-button--has-text) {
  --focus-ring-width: 0.0625rem;
  --sb-shadow-medium: 0 0 transparent;
  color: var(--sb-color-blue-dark);
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]):not(.dnb-button--has-text)::before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: var(--button-tertiary-focus-left);
  bottom: 0;
  right: var(--button-tertiary-focus-right);
  height: inherit;
  border-radius: inherit;
  outline: none;
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color), var(--sb-shadow-medium);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]):not(.dnb-button--has-text)::before {
  background-color: var(--button-background--focus);
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]):not(.dnb-button--has-text) > * {
  z-index: 2;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) {
  color: var(--sb-color-blue-dark);
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled])::before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: var(--button-tertiary-focus-left);
  bottom: 0;
  right: var(--button-tertiary-focus-right);
  height: inherit;
  border-radius: inherit;
  outline: none;
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color), var(--sb-shadow-medium);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled])::before {
  background-color: var(--button-background--focus);
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) > * {
  z-index: 2;
}
.dnb-button--tertiary[disabled] {
  color: var(--sb-color-gray-dark);
}
.dnb-button--on-dark-background {
  --button-primary-color: var(--sb-color-text);
  --button-primary-color--hover: var(--sb-color-purple-alternative);
  --button-primary-color--active: var(--sb-color-purple-alternative);
  --button-primary-background: var(--sb-color-green);
  --button-primary-background--hover: var(--sb-color-violet-light-2);
  --button-primary-background--active: var(--sb-color-violet-light-3);
  --button-secondary-color: var(--sb-color-white);
  --button-secondary-color--hover: var(--sb-color-purple-alternative);
  --button-secondary-color--active: var(--sb-color-purple-alternative);
  --button-secondary-background: transparent;
  --button-secondary-background--hover: var(--sb-color-violet-light-2);
  --button-secondary-background--active: var(--sb-color-violet-light-3);
  --button-secondary-border--default: var(--sb-color-green);
  --button-secondary-border--hover: var(--sb-color-violet-light);
  --button-secondary-border--active: var(--sb-color-violet-light);
  --button-tertiary-color: var(--sb-color-white);
  --button-tertiary-border: var(--sb-color-green);
}"
`;

exports[`Button scss has to match theme css for ui 1`] = `
"/*
* Button theme
*
*/
/*
 * Utilities
 */
/*
 * Utilities
 */ /*
* Button mixins
*
*/
/*
 * Utilities
 */
/*
 * Utilities
 */ /*
* Button mixins
*
*/
.dnb-button--tertiary {
  --button-tertiary-focus-left: -0.5rem;
  --button-tertiary-focus-right: -0.5rem;
  --button-tertiary-focus-overflow--icon-top: -0.5rem;
  --button-tertiary-underline-left: var(
    --button-tertiary-underline-overflow
  );
  --button-tertiary-underline-right: var(
    --button-tertiary-underline-overflow
  );
  --button-tertiary-underline-overflow: 0;
  --button-tertiary-underline-overflow--icon: calc(
    (var(--button-icon-gutter) + var(--button-icon-size)) * -1
  );
}
.dnb-button--tertiary .dnb-button__text {
  position: relative;
}
.dnb-button--tertiary .dnb-button__text::after {
  content: "";
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  bottom: 0;
  width: auto;
  height: 0.095rem;
  border-radius: 0.0475rem;
  color: var(--color-sea-green);
  background-color: currentcolor;
  bottom: -0.0625rem;
  color: transparent;
  transition: color 250ms ease-in-out;
  left: var(--button-tertiary-underline-left);
  right: var(--button-tertiary-underline-right);
}
[data-visual-test-wrapper] .dnb-button--tertiary .dnb-button__text::after {
  transition: none;
}
.dnb-skeleton .dnb-button--tertiary .dnb-button__text::after {
  content: none;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) {
  outline: none;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled])::before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: var(--button-tertiary-focus-left);
  bottom: 0;
  right: var(--button-tertiary-focus-right);
  height: inherit;
  border-radius: inherit;
  outline: none;
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:focus-visible:not([disabled]) .dnb-button__text::after {
  visibility: hidden;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]) .dnb-button__text::after {
  visibility: visible;
}
.dnb-button--tertiary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--tertiary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--tertiary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) {
  outline: initial;
}
html[data-whatinput=keyboard] .dnb-button--tertiary:active:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) {
  box-shadow: none;
}
html[data-whatintent=touch] .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html[data-whatintent=touch] html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
  transition: none;
  visibility: visible;
  opacity: 1;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html:not([data-whatintent=touch]) html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
  visibility: hidden;
}
.dnb-button--tertiary.dnb-button--has-text {
  --button-padding-left: 0;
  --button-padding-right: 0;
  --button-icon-margin-top: calc(
    (var(--button-height) - var(--button-icon-size)) / 2
  );
}
.dnb-button--tertiary.dnb-button--has-text .dnb-button__icon {
  align-self: flex-start;
}
.dnb-button--tertiary.dnb-button--icon-position-top {
  --button-tertiary-focus-left: var(
    --button-tertiary-focus-overflow--icon-top
  );
  --button-tertiary-focus-right: var(
    --button-tertiary-focus-overflow--icon-top
  );
  flex-direction: column;
  border-radius: 0.5rem;
  vertical-align: middle;
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--has-text {
  --button-icon-margin-top: 0.5rem;
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--has-text .dnb-button__icon {
  align-self: center;
}
.dnb-button--tertiary.dnb-button--icon-position-top .dnb-button__text {
  margin-top: 0;
  margin-bottom: 0.25rem;
  font-size: var(--font-size-x-small);
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--size-large .dnb-button__text {
  font-size: var(--font-size-small);
}
.dnb-button--tertiary.dnb-button--icon-position-top .dnb-button__alignment {
  order: 3;
  height: 0;
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-size-medium, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-size-large {
  --button-tertiary-underline-overflow--icon: var(
    --button-tertiary-underline-overflow
  );
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left {
  --button-tertiary-focus-right: -1rem;
  --button-tertiary-underline-left: var(
    --button-tertiary-underline-overflow--icon
  );
}
.dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right {
  --button-tertiary-focus-left: -1rem;
  --button-tertiary-underline-right: var(
    --button-tertiary-underline-overflow--icon
  );
}
.dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text) {
  --button-tertiary-focus-left: 0;
  --button-tertiary-focus-right: 0;
}
html[data-whatinput=keyboard] .dnb-button--tertiary:hover:focus .dnb-button__text::after {
  visibility: hidden;
}

.dnb-button--primary {
  color: var(--color-white);
  background-color: var(--color-sea-green);
}
html:not([data-whatintent=touch]) .dnb-button--primary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--primary:hover:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-white);
  --border-color: var(--color-emerald-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--primary:focus[disabled], html:not([data-whatintent=touch]) .dnb-button--primary:focus[disabled] {
  cursor: not-allowed;
}
.dnb-button--primary:focus:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--primary:focus:not([disabled]) {
  outline: none;
}
html[data-whatinput=keyboard] .dnb-button--primary:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--primary:focus:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-white);
}
html[data-whatinput=keyboard] .dnb-button--primary:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--primary:focus:not([disabled]) {
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--primary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--primary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--primary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--primary:active:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-mint-green-50);
  --border-color: transparent;
  --border-width: 0.0625rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--primary[disabled] {
  color: var(--color-white);
  background-color: var(--color-sea-green-30);
}
.dnb-button:not([disabled]).dnb-button--primary.dnb-button__status--error {
  color: var(--color-white);
  background-color: var(--color-fire-red);
}
.dnb-button--secondary {
  color: var(--color-sea-green);
  background-color: var(--color-white);
  --border-color: var(--color-sea-green);
  --border-width: 0.0625rem;
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:hover:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-white);
  --border-color: var(--color-emerald-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary:focus[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:focus[disabled] {
  cursor: not-allowed;
}
.dnb-button--secondary:focus:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:focus:not([disabled]) {
  outline: none;
}
html[data-whatinput=keyboard] .dnb-button--secondary:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--secondary:focus:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-white);
}
html[data-whatinput=keyboard] .dnb-button--secondary:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--secondary:focus:not([disabled]) {
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--secondary:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:active:not([disabled]) {
  color: var(--color-sea-green);
  background-color: var(--color-mint-green-50);
  --border-color: transparent;
  --border-width: 0.0625rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary[disabled], .dnb-button--secondary[disabled]:focus {
  color: var(--color-sea-green-30);
  background-color: var(--color-white);
  --border-color: var(--color-sea-green-30);
  --border-width: 0.0625rem;
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error {
  color: var(--color-fire-red);
  --border-color: var(--color-fire-red);
  --border-width: 0.0625rem;
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error .dnb-button__icon {
  color: inherit;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):hover:not([disabled]) {
  color: var(--color-emerald-green);
  background-color: var(--color-white);
  --border-color: var(--color-emerald-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary:not(.dnb-button--has-text):focus[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):focus[disabled] {
  cursor: not-allowed;
}
.dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]) {
  outline: none;
}
html[data-whatinput=keyboard] .dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]) {
  color: var(--color-emerald-green);
  background-color: var(--color-white);
}
html[data-whatinput=keyboard] .dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):focus:not([disabled]) {
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary:not(.dnb-button--has-text):active[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):active[disabled] {
  cursor: not-allowed;
}
.dnb-button--secondary:not(.dnb-button--has-text):active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text):active:not([disabled]) {
  color: var(--color-emerald-green);
  background-color: var(--color-mint-green-50);
  --border-color: transparent;
  --border-width: 0.0625rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--secondary:not(.dnb-button--has-text):not(.dnb-button--input-button):not(.dnb-button--control-before):not(.dnb-button--control-after).dnb-button--size-large {
  width: calc(var(--button-width--large) - 0.5rem);
  line-height: calc(var(--button-height) - 0.5rem);
}
.dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before, .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after {
  box-shadow: none;
  border: none;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before:hover[disabled], html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-before:hover:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--secondary:not(.dnb-button--has-text).dnb-button--control-after:hover:not([disabled]) {
  box-shadow: none;
  border: none;
}
.dnb-button--active {
  --border-color: var(--color-emerald-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--tertiary {
  color: var(--color-sea-green);
  background-color: transparent;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--tertiary:hover:not([disabled]) .dnb-button__text::after {
  color: var(--color-emerald-green);
}
.dnb-button--tertiary:active[disabled], html:not([data-whatintent=touch]) .dnb-button--tertiary:active[disabled] {
  cursor: not-allowed;
}
html[data-whatintent=touch] .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html[data-whatintent=touch] html:not([data-whatintent=touch]) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
  color: var(--color-emerald-green);
}
.dnb-button--tertiary.dnb-button--icon-position-top .dnb-button__text {
  font-size: var(--font-size-x-small);
}
.dnb-button--tertiary.dnb-button--icon-position-top.dnb-button--size-large .dnb-button__text {
  font-size: var(--font-size-small);
}
.dnb-button--tertiary[disabled] {
  color: var(--color-sea-green-30);
}
.dnb-button--signal {
  color: var(--color-ocean-green);
  background-color: var(--color-accent-yellow);
}
html:not([data-whatintent=touch]) .dnb-button--signal:hover[disabled] {
  cursor: not-allowed;
}
html:not([data-whatintent=touch]) .dnb-button--signal:hover:not([disabled]) {
  color: var(--color-ocean-green);
  background-color: var(--color-accent-yellow);
  --border-color: var(--color-ocean-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
html[data-whatintent=touch] .dnb-button--signal:active[disabled], html:not([data-whatintent=touch]) html[data-whatintent=touch] .dnb-button--signal:active[disabled] {
  cursor: not-allowed;
}
html[data-whatintent=touch] .dnb-button--signal:active:not([disabled]), html:not([data-whatintent=touch]) html[data-whatintent=touch] .dnb-button--signal:active:not([disabled]) {
  color: var(--color-ocean-green);
  background-color: var(--color-accent-yellow);
  --border-color: var(--color-ocean-green);
  --border-width: 0.125rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--signal:focus[disabled], html:not([data-whatintent=touch]) .dnb-button--signal:focus[disabled] {
  cursor: not-allowed;
}
.dnb-button--signal:focus:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--signal:focus:not([disabled]) {
  outline: none;
}
html[data-whatinput=keyboard] .dnb-button--signal:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--signal:focus:not([disabled]) {
  color: var(--color-ocean-green);
  background-color: var(--color-accent-yellow);
}
html[data-whatinput=keyboard] .dnb-button--signal:focus:not([disabled]), html[data-whatinput=keyboard] html:not([data-whatintent=touch]) .dnb-button--signal:focus:not([disabled]) {
  --border-color: var(--focus-ring-color);
  --border-width: var(--focus-ring-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--signal:active[disabled], html:not([data-whatintent=touch]) .dnb-button--signal:active[disabled] {
  cursor: not-allowed;
}
.dnb-button--signal:active:not([disabled]), html:not([data-whatintent=touch]) .dnb-button--signal:active:not([disabled]) {
  color: var(--color-ocean-green);
  background-color: var(--color-accent-yellow);
  --border-color: transparent;
  --border-width: 0.0625rem;
  box-shadow: 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}
.dnb-button--signal[disabled] {
  color: var(--color-black-20);
  background-color: var(--color-accent-yellow-30);
}
.dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]) {
  background-color: transparent;
  box-shadow: none;
}
.dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled])::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: var(--input-border-width);
  background-color: currentcolor;
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):focus-visible, html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):hover {
  color: var(--color-white);
  box-shadow: none;
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):focus-visible, html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):focus-visible::after, html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):hover, html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):hover::after {
  background-color: var(--color-sea-green);
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):active {
  color: var(--color-sea-green);
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):active, html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):active::after {
  background-color: var(--color-mint-green-50);
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text):not([disabled]):active::after {
  top: var(--input-border-width);
  bottom: var(--input-border-width);
}
html:not([data-whatintent=touch]) .dnb-button--input-button.dnb-button--secondary:not(.dnb-button--has-text)[disabled] {
  color: var(--color-black-55);
  background-color: var(--color-black-3);
  --border-color: var(--color-black-55);
  --border-width: var(--input-border-width);
  box-shadow: inset 0 0 0 var(--border-width) var(--border-color);
  border-color: transparent;
}"
`;
